--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
 
 <head>
+	<script>function a(idd){
+			var parentDiv =  document.getElementById("all");
+var iddElement = document.getElementById(idd)
+var scrollTo = iddElement.offsetTop-50;
+parentDiv.scrollTop = scrollTo;
+
+	}</script>
 	<title>Mohammed Irfan</title>
 	<link rel="stylesheet" href="./style.css" />
 	<link href="<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,52 +19,134 @@
 </head>
 
 <body>
+		<div id="all">
+		<img src="./20564086.jpg" width="1510px" height="1000px">
+		
+		<div id="Aboutme" onclick="a('a')"><a id="ab" href="#">About me</a></div>
+		
+		<div id="Aboutmyfamily" onclick="a('b')"><a  id="abm" href="#">About my family</a></div>
+		
+		<div id="Hobbies" onclick="a('c')"><a id="ho" href="#">Hobbies</a></div>
+		
+		<div id="Dreams" onclick="a('d')"><a id="dr" href="#">Dreams</a></div>
+		
+		<h1 id="letsgo">LETS GO</h1>
+		
+		<p id="Click">Welcome to my page</h3>
+		
+		<img id="img2" src="istockphoto-1332097112-170667a.jpg" width="1540px" height="1000px">
+		
+		
+		
+		<div><img id="img10" src="IMG_20221025_204338.jpg" width="500px" height="700px"/></div>
+		
+		<section>
+		
+		<div id="a"><u>About me</u></div>
+	
+		
+		<p id="myself">My name is Mohammed Irfan.Nickname is Irfu.I was born on 15th September 2003 in Chidambaram Government Hospital. I was born in night at 12.30AM. My Childhood 
 
-	<a href="https://www.freshworks.com/">Freshworks</a>
-<section id="Name"></section>
-<h2>Mohammed Irfan</h2>
+			days spends in my native Neyveli. My 3rd age My family and me went to Chennai Avadi. My Childhood Schooling From LKG to 1st std in primary school.Then 2nd std studied 
+			
+			in Bharathiyar matriculation school. Then my family went to mangadu, ponathamallee so that My Schooling also changed school name is AHM Nursery Primary School (Arabic School)
+			
+			I Studied 3rd std to 6th std in this school. Then My 7th Schooling in Government School in mangadu. Again My family went to Pallavaram My 8th std Schooling was Maraimalai Adigal
+			
+			Government school and the last again My family went to shift house in Guduvanchery My 9th std Schooling was completed in Nandivaram Boys Higher Secondary School.<br>
+			
+			My Schooling Journey Between <br>
+			
+			(2006 to 2021)</p>
 
-<h3><ins>About me</ins></h3>
+		</section>
+			
+		<img id="img3" src="./istockphoto-1318700745-170667a.jpg" width="2210px" height="1000px"/>
+		
+		<img id=="img4" src="./istockphoto-1298777114-170667a.jpg" width="1540px" height="1000px"/>
+		
+		<img src="./cool-Black-background-3d.jpg"/>
+		
+		<img id="img5" src="./IMG_20221027_223516.jpg" width="400px" height="500px"/>
+		
+		
+		
+	
+		<div id="b"><u>About My Family</u></div>
+		
+		<p id="myfamily">MY Father name is Rahamathulla, Mother Name is Basheera begum and My two borthers name is Adham ali and Mohammed ibrahim. I am the Fifth of my family called 
+		
+			Mohammed Irfan. My Father Occupation is Apartment Security in Vadapalani. My Mother is Housewife. My two brothers are worked in private company. My family when i was born
+			
+			time very down in Financially after a few years My first brother joined a Company then Become a normal level.</p>
+			
+		
+		
+		<div id="c"><u>Hobbies</u></div><br><br><br>
+		
+		
+		<section>
+		<div><img id="img6" src="1587450268.jpg" width="220px" height="300px"/></div>
+		<div><img id="img7" src="crop.jfif" width="220px" height="300px"/></div>
+		<div><img id="img8" src="photo-1542296332-2e4473faf563.jfif" width="220px" height="300px"/></div>
+		<div><img id="img9" src="wp9732466.jpg" width="220px" height="300px"/></div>
+		
+		
+		<div id="hobbie">
+		<p><b><u>Morning:</u></b><br>
+			Every Morning I woke up and first go to bathroom brush my teeth and wash my face not using mobile.<br><br>
+			<b><u>Dance</u></b><br>
+			I like to Dance because my Inspirationis Vijay his age is 48. still now he is the best dancer in South Cinema Industry.<br><br>
+			<b><u>Acting:</u></b><br>
+			I like to Acting because my inspiration is Micset Sriram.<br><br>
+			<b><u>Story Writing:</u></b><br>
+			I like to story writing because my inspiration is Lokesh Kanagraj he didn't go to class not working assistant director but he works hard and 
+			beleive himself that only I like him.<br><br>
+			<b><u>Cricket:</u></b><br>
+			My one and one Inspiration,Motivation,Love and Emotion all are King of the Cricket called Virat Kohli.so thatI like and Love Cricket.<br><br>
+			<b><u>Travelling:</u></b><br>
+			I like to Travel Australia once in my life time because longest distance country kilometre vice. I like to travel boating also.
+			
+		</p>
+		</div>
+		</section>
+		
+		<section>
+		
+		<div><img id="img11" src="1317994.jpg" width="300px" height="300px"/></div>
+		
+		<div><img id="img12" src="HD-wallpaper-dreams-beautiful-quotes-sayings.jpg" width="300px" height="300px"/></div>
+		<div id="d"><b><u>Dreams</u></b></div>
+		
+		<p id="drea">No short term and  No long term dream is one that is big.<br><br>
+		<b><u>Before Freshworks:</u></b><br><br>
+		
+		My mind tells go to join college then completed college go to join a Cricket club or join a Cinematography bla bla...<br><br>
+		
+		<b><u>After Freshworks:</u></b><br><br>
+		
+		Now my mind is clean not to say just a word it's comes to my heart. I am not sure because i am not see how is the work difficult but i will try lots of 
+		
+		hard work,punctuallity be honesty for two things maninly:<br><br>
+		
+		Become a Ios Developer in Freshworks.<br><br>
+		
+		Become a Good Batsman in Freshworks.<br><br>
+		
+		This will happened definitely I am Happy.
+		</p>
+		<div id="img13"><img src="IMG_20221027_224306.jpg" width="300px" height="300px"/></div>
+		
+		<div id="img14"><img src="IMG_20221027_225348.jpg" width="300px" height="300px"/></div>
+		
+		
+		
+			</section>
+		
+	
 
-I am Mohammed Irfan. I am from guduvanchery Chennai. I was born on 15/09/2003 at chidambaram. I am the fifth of my family father,mother and I have two elder brothers.
-I studied LKG to 2nd in little Primary school Avadi.Then came to Poonathammalle mangadu then I studied  3rd std to 6 std in Arabic private  school.
-then 7th std I studied mangadu government high school.then 8th std I studied pallavaram maraimalai adigal government school.
-then 9th std to 12std I studied nandivaramBoys' higher secondary school guduvanchery.In my school I am a average student.
-
-<h3><ins>About My Family</ins></h3>
-
-<p>I am Fifth of my Family <b>Mohammed Irfan</b>
-   My Father Name is Rahamathulla he is work in Apartment security in Vadapalani.
-	My Mother Name is Basheera Begum she is a Housewife.
-	I Have two elder Brothers Both are work a Private Company.
-</p>
-
-<h3><ins>My Hobbies</ins></h3>
-
-<ul>
-	<li>
-		I love playing Cricket
-	</li>
-
-	<p>I like to play cricket and i  love more cricket  because the reason is in 2010 I studied 2nd std I go to play evening to street friends but my friends didn't talk to me and
-
-	 also didn't select to match so I hurts a lot sometimes I cry also .so that I mentally strong I will definitely 
-
-	become a super batsman so I love cricket still now.I like dance and acting also i inspired by Instagram celebraties .
-</p>
-
-</ul>
-
-<h3><ins>Dream</ins></h3>
-
-<p>Become a <b>IOS Developer</b>Good <b>Dancer</b>Best <b>Batsman</b></p>
-
-<h3><ins>Conclusion</ins></h3>
-
-<p>Two things I have set strong to my heart One is <strong>Work Hard</strong>Another one is <strong>Help to Others</strong></p>
-
-<h4>This is My Kutty Story</h4>
-
+		</div>
+		
 
 </body>
 </html>
